fixed bug with overflow: hidden

--- a/src/html/pages/tecron-pro/main-screen/main-screen.scss
+++ b/src/html/pages/tecron-pro/main-screen/main-screen.scss
@@ -13,6 +13,7 @@
 
 
 .main-screen {
+   padding-bottom: 5px;
    position: relative;
    .ui-container {
       @include container(
